--- a/resources/assets/js/modules/PokemonsList/style.scss
+++ b/resources/assets/js/modules/PokemonsList/style.scss
@@ -3,6 +3,12 @@
 @import '~foundation-sites/scss/foundation';
 
 .Pokemons-list {
+  .List {
+    &__params {
+      @include row;
+    }
+  }
+
   .Pokemon-row {
     @include row();
     $avatar-size: 100px;
@@ -75,11 +81,22 @@
   }
 
   .PageSizeSelecter {
-    @include col(3, 6);
-    @include colOff(9, 6);
+    @include col(2, 3);
+    @include colOff(7, 3);
 
     &__title {
       color: #555;
+    }
+
+    &__select {
+      .Select-control {
+        border-radius: 0;
+        box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
+      }
+
+      .Select-menu-outer {
+        border-radius: 0;
+      }
     }
   }
 
@@ -97,5 +114,10 @@
     &__active {
       border-bottom: 1px solid #aaa;
     }
+  }
+
+  .SearchBox {
+    @include foundation-form-text;
+    @include col(3, 6);
   }
 }
