--- a/resources/assets/sass/_typography.scss
+++ b/resources/assets/sass/_typography.scss
@@ -19,3 +19,13 @@ a {
   text-align: center;
   margin: 50px 0;
 }
+
+// fixes for react-select
+.Select-control {
+  border-radius: 0 !important;;
+  box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
+}
+
+.Select-menu-outer {
+  border-radius: 0 !important;
+}
