--- a/resources/assets/js/modules/Pokemons/style.scss
+++ b/resources/assets/js/modules/Pokemons/style.scss
@@ -1,21 +1,29 @@
 @import "~styles/mixins";
 @import "~styles/variables";
+@import "~styles/components/tables";
 @import '~foundation-sites/scss/foundation';
 
 .Pokemons-list {
   .List {
     &__params {
       @include row;
+      margin-bottom: 10px;
+    }
+
+    &__table {
+      @include default-table
+
+      td {
+        vertical-align: middle;
+      }
     }
   }
 
   .Pokemon-row {
-    @include row();
     $avatar-size: 100px;
     position: relative;
     height: $avatar-size + 30px;
     border-bottom: 1px solid #eef;
-    $left: $avatar-size + 5px;
     padding: 8px 0;
 
     &:last-child {
@@ -23,24 +31,13 @@
     }
 
     &__avatar {
-      position: absolute;
       width: $avatar-size;
       height: $avatar-size;
-      top: 14px;
-      left: 0;
       background-size: cover;
       background-position: 50% 50%;
       background-color: #f2f2f2;
       border-radius: 5px;
-    }
-
-    &__content {
-      left: $left + 7px;
-      position: relative;
-    }
-
-    &__title {
-      line-height: 1.05em;
+      margin: 0 5px;
     }
 
     &__name {
@@ -48,35 +45,32 @@
       font-weight: 700;
     }
 
-    &__main-attributes {
-      font-size: .9em;
-    }
-
-    &__other-attributes {
-      position: absolute;
-      left: 10px;
-      font-size: .75em;
-      top: 35px;
-      line-height: .6em;
-      border-left: 2px solid #eee;
-      padding-left: 7px;
-      padding-top: 4px;
-    }
-
     &__size-attributes {
-      position: absolute;
       font-size: .7em;
-      bottom: 15px;
-      left: 20px;
       color: #666;
+      text-align: center;
+    }
+
+    &__abilities {
+      color: #3180c5;
     }
 
     &__types {
-      position: absolute;
-      bottom: 0;
-      left: 5px;
       color: #aaa;
       font-size: .9em;
+    }
+
+    &__md {
+      &.-up {
+        @include breakpoint(small down) {
+          display: none;
+        }
+      }
+      &.-down {
+        @include breakpoint(medium up) {
+          display: none;
+        }
+      }
     }
   }
 
