--- a/resources/assets/sass/components/_tables.scss
+++ b/resources/assets/sass/components/_tables.scss
@@ -1,8 +1,7 @@
 @import '~foundation-sites/scss/foundation';
 
 @mixin default-table() {
-  @include table('odd');
-  @include table-hover;
+  @include table('none');
 
   td {
     padding: 5px;
