Add chart with attributes to table

--- a/resources/assets/js/modules/Pokemons/style.scss
+++ b/resources/assets/js/modules/Pokemons/style.scss
@@ -103,4 +103,12 @@
       border-bottom: 1px solid #aaa;
     }
   }
+
+  .AttributesChart {
+    //transform: rotate(90deg);
+
+    .recharts-text {
+
+    }
+  }
 }
